Fix horizontal grid overflow
Use repeat minmax method to change number of books on screen depending on screen size to prevent horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ button.new-book {
 
 .bookshelf {
   display: grid;
-  grid-template-columns: repeat(20, 11ch);
+  grid-template-columns: repeat(auto-fit, minmax(11ch, 1fr));
   grid-template-rows: 1fr 1fr;
   grid-auto-rows: 1fr;
   gap: 10px;
@@ -70,8 +70,6 @@ button.new-book {
 }
 
 /*need to: 
--Fix horizontal grid overflow and vertical grid overflow
-  -Use the autofit/fill minmax tech
+
 -Fix modal formatting
--Format header including fonts
--Format button/s
+-Format header including fonts / add a quote
